加载器 - 处理css文件

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div>轮播图</div>
+    <div class="marquee">轮播图</div>
     <div>tab标签页</div>
     <script src="../lib/webpack-demo.js"></script>
 </body>
