--- a/lib/index.html
+++ b/lib/index.html
@@ -7,8 +7,8 @@
     <title>Document</title>
 <script defer src="webpack-demo.js"></script></head>
 <body>
-    <div>轮播图</div>
+    <div class="marquee">轮播图</div>
     <div>tab标签页</div>
-    <script src="../src/index.js"></script>
+    <script src="../lib/webpack-demo.js"></script>
 </body>
 </html>
