加载器 - 处理less文件

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="marquee">轮播图</div>
-    <div>tab标签页</div>
+    <div class="tab">tab标签页</div>
     <script src="../lib/webpack-demo.js"></script>
 </body>
 </html>
