--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,9 @@
 <body>
     <div class="marquee">轮播图</div>
     <div class="tab">tab标签页</div>
-    <script src="../lib/webpack-demo.js"></script>
+    <!-- <script src="../lib/webpack-demo.js"></script> -->
+    
+
+
 </body>
 </html>
