--- a/text.html
+++ b/text.html
@@ -5,13 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-<script defer src="webpack-demo.js"></script></head>
+</head>
 <body>
-    <div class="marquee">轮播图</div>
-    <div class="tab">tab标签页</div>
-    <!-- <script src="../lib/webpack-demo.js"></script> -->
-    
-
-
+    <img src="./src/assets/1.gif" alt="">
+    <img src="" alt="">
 </body>
 </html>
