--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,8 @@
     <div class="marquee">轮播图</div>
     <div class="tab">tab标签页</div>
     <!-- <script src="../lib/webpack-demo.js"></script> -->
-    
+    <div class="iconfont icon-qq"></div>
+    <div class="iconfont icon-weixin"></div>
 
 
 </body>
